--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
 }
 
 .App-logo {
@@ -36,3 +40,128 @@
     transform: rotate(360deg);
   }
 }
+
+.about-wrapper {
+  font-size: 12px;
+}
+
+.topp-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
+.font-14 {
+  font-size: 14px;
+}
+
+.title {
+  font-size: 20px;
+}
+
+.banner-wrapper {
+  width: 100%;
+  height: 126px;
+}
+
+.banner-wrapper-menu {
+  width: 100%;
+  height: 221px;
+}
+
+.logo {
+  background-color: #EF3E42;
+  height:44px;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
+
+.logo-dimension {
+  width: 38px;
+  height: 37.15px;
+  margin-top: 5px;
+}
+
+.menu-wrapper {
+  margin-top: -60px;
+}
+
+.menu-content {
+  background-color: #ffffff;
+  border-radius: 22px;
+}
+
+.st-1 {
+  height: 18px;
+  width: 48px;
+  border-radius: 4px;
+  background-color: #49BB5C;
+  color: #ffffff;
+}
+
+.input-style {
+  width: 20px;
+  border-color: transparent;
+  padding-left: 5px;
+  color: #2E2E2E;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.recommended {
+  color: #223136;
+  font-size: 14px;
+}
+
+.button-group {
+  float: right;
+  border: 0.85px solid #C4C4C4;
+  border-radius: 5px;
+}
+
+.menu-button {
+  height: 32px;
+  width: 87px;
+  border-radius: 16px;
+  background-color: #2E2E2E;
+  color: #ffffff;
+  font-weight: 600;
+  padding-top: 7px;
+}
+
+.my-order {
+  height: 57px;
+  width: 149px;
+  border-radius: 11px 0 0 0;
+  background-color: #EF3E42;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: bold;
+  padding-top: 17px;
+}
+
+.next-arrow {
+  float: right;
+  padding-top: 10px;
+}
+
+.delivery {
+  border: 1px solid #E3E3E3;
+  border-radius: 10px;
+}
+
+.delivery-location {
+  color: #2D2D2D;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .banner-wrapper {
+    height: 250px;
+  }
+}
+
